--- a/index.css
+++ b/index.css
@@ -270,6 +270,15 @@
             background-position: center;
         }
 
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 8px; /* match your container */
+        }
+
         .play-button {
             display: flex;
             align-items: center;
@@ -788,3 +797,4 @@
                 flex-direction: column;
             }
         }
+
